# endless_learning

./: .gitignore  README.md
CPP/codes/: callback.cpp  video_read_save.cpp
CPP/codes/cpp_primer_plus/: 8_10_leftover.cpp
CPP/codes/cpp_primer_plus/9.1_coordin/: file1.cpp
CPP/codes/cpp_primer_plus/9.1_coordin/include/: coordin.h
CPP/codes/cpp_primer_plus/9.1_coordin/src/: file2.cpp
CPP/codes/cpp_primer_plus/9.5_extern/: external.cpp  support.cpp
Opencv/: color.ipynb  test.ipynb
Paddle/jupyter/: 一个案例吃透深度学习.ipynb
PyTorch/jupyter/: 0.快速入门.ipynb  1.张量.ipynb  1.快速入门.ipynb
Python/codes/jupyter/: test.ipynb
ROS2/codes/test_ros/src/test/logic_node_py/: package.xml  setup.cfg  setup.py
ROS2/codes/test_ros/src/test/logic_node_py/logic_node_py/: logic.py
ROS2/codes/test_ros/src/test/number_to_words_service_client_py/: package.xml  setup.cfg  setup.py
ROS2/codes/test_ros/src/test/number_to_words_service_client_py/number_to_words_service_client_py/: number_to_words_service_client.py
ROS2/codes/test_ros/src/test/number_to_words_service_server_py/: package.xml  setup.cfg  setup.py
ROS2/codes/test_ros/src/test/number_to_words_service_server_py/number_to_words_service_server_py/: number_to_words_service_server.py
ROS2/codes/test_ros/src/test/sonar_node/: CMakeLists.txt  package.xml
ROS2/codes/test_ros/src/test/sonar_node/include/sonar_node/: sonar_pub.h
ROS2/codes/test_ros/src/test/sonar_node/src/: sonar_pub.cpp
ROS2/codes/test_ros/src/test/test_action/: CMakeLists.txt  package.xml
ROS2/codes/test_ros/src/test/test_action/include/test_action/: action_move_client.h  action_move_server.h
ROS2/codes/test_ros/src/test/test_action/src/: action_move_client.cpp  action_move_server.cpp
ROS2/codes/test_ros/src/test/test_action_py/: package.xml  setup.cfg  setup.py
ROS2/codes/test_ros/src/test/test_action_py/test_action_py/: action_move_client.py  action_move_server.py
ROS2/codes/test_ros/src/test/test_interfaces/: CMakeLists.txt  package.xml
ROS2/codes/test_ros/src/test/test_interfaces/srv/: NumberToWords.srv
ROS2/codes/test_ros/src/test/test_service/: CMakeLists.txt  package.xml
ROS2/codes/test_ros/src/test/test_service/include/test_service/: service_adder_client.h  service_adder_server.h
ROS2/codes/test_ros/src/test/test_service/src/: service_adder_client.cpp  service_adder_server.cpp
ROS2/codes/test_ros/src/test/test_service_py/: package.xml  setup.cfg  setup.py
ROS2/codes/test_ros/src/test/test_service_py/test_service_py/: service_adder_client.py  service_adder_server.py
cpp/codes/: CMakeLists.txt  hello_word.cpp  time_util.cpp  video_read_save.cpp
